--- a/app/src/main/res/layout/item_bottom_sheet_select.xml
+++ b/app/src/main/res/layout/item_bottom_sheet_select.xml
@@ -29,7 +29,7 @@
             android:paddingTop="@dimen/padding_size_10"
             android:paddingBottom="@dimen/padding_size_10"
             android:text="@{item.name}"
-            android:textColor="@color/colorBlack"
+            android:textColor="@color/colorTextPrimary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
