--- a/app/src/main/res/layout/item_gallery_selected_photo.xml
+++ b/app/src/main/res/layout/item_gallery_selected_photo.xml
@@ -10,33 +10,39 @@
             type="String" />
 
         <variable
+            name="pos"
+            type="Integer" />
+
+        <variable
             name="viewModel"
             type="com.hmju.memo.viewModels.GalleryViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_width="@dimen/size_55"
+        android:layout_height="@dimen/size_55">
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginRight="@dimen/margin_size_5"
+            android:layout_width="@dimen/size_50"
+            android:layout_height="@dimen/size_50"
             android:adjustViewBounds="true"
+            android:scaleType="centerCrop"
             app:bindImgGallery="@{imgUrl}"
-            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             tools:src="@drawable/temp1" />
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="@dimen/size_25"
-            android:layout_height="@dimen/size_25"
+            android:layout_width="@dimen/size_20"
+            android:layout_height="@dimen/size_20"
             android:adjustViewBounds="true"
-            android:padding="@dimen/padding_size_5"
+            android:paddingLeft="@dimen/padding_size_2"
+            android:paddingBottom="@dimen/padding_size_2"
             android:src="@drawable/ic_remove"
+            app:filterColorId="@{@color/colorWhite_50}"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:turtleClick="@{()->viewModel.removePhoto(imgUrl)}" />
+            app:turtleClick="@{()->viewModel.onSelect(pos,imgUrl)}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
