--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,14 +3,19 @@
     <color name="colorPrimary">#1976d2</color>
     <color name="colorPrimaryLight">#63a4ff</color>
     <color name="colorPrimaryDark">#004ba0</color>
-    <color name="colorAccent">#ffffff</color>
+    <color name="colorAccent">#000000</color>
 
-    <color name="colorSecondary">#7b1fa2</color>
-    <color name="colorSecondaryLight">#ae52d4</color>
-    <color name="colorSecondaryDark">#4a0072</color>
-    <color name="colorWhite">#FFFFFF</color>
-    <color name="colorBlack">#000000</color>
-    <color name="colorCoolGrey">#dddddd</color>
+    <color name="colorStatusBar">#FFFFFF</color>
+    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorNavigation">#80E4E4E4</color>
+    <color name="colorResErrBackground">#54DCDCDC</color>
+    <color name="colorTextInputLayoutLine">#D3D8DE</color>
+
+    <color name="colorTextPrimary">#000000</color>
+    <color name="colorTextPrimaryLight">#212121</color>
+    <color name="colorTextWhite">#FFFFFF</color>
+
+    <color name="colorHeaderOverlay">#19FFFFFF</color>
     
     <color name="colorPrimaryNegative">#e6892d</color>
     <color name="colorPrimaryLightNegative">#9c5b00</color>
@@ -30,6 +35,9 @@
     <color name="colorPlaceHolder_3">#42DA9197</color>
     <color name="colorPlaceHolder_4">#4291A1DA</color>
 
+    <color name="colorBlack">#000000</color>
+    <color name="colorWhite">#FFFFFF</color>
     <color name="colorWhite_50">#80FFFFFF</color>
+    <color name="colorCoolGrey">#dddddd</color>
 
 </resources>
