--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -24,7 +24,7 @@
     </style>
 
     <style name="AppTheme.MemoDetail">
-        <item name="android:statusBarColor" tools:ignore="NewApi">@color/colorStatusBar</item>
+        <item name="android:statusBarColor" tools:ignore="NewApi">@color/colorBackground</item>
         <item name="android:windowLightStatusBar" tools:ignore="NewApi">true</item>
     </style>
 
@@ -47,6 +47,8 @@
     </style>
 
     <style name="EditTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="boxStrokeColor">@color/colorTextInputLayoutLine</item>
         <item name="hintTextColor">@color/colorTextInputLayoutLine</item>
     </style>
