--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -90,6 +90,7 @@
     <dimen name="size_85">85dp</dimen>
     <dimen name="size_90">90dp</dimen>
     <dimen name="size_100">100dp</dimen>
+    <dimen name="size_105">105dp</dimen>
     <dimen name="size_120">120dp</dimen>
     <dimen name="size_130">130dp</dimen>
     <dimen name="size_180">180dp</dimen>
