--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,4 +40,7 @@
     <color name="colorWhite_50">#80FFFFFF</color>
     <color name="colorCoolGrey">#dddddd</color>
 
+    <color name="colorNormalIndicator">#6A6969</color>
+    <color name="colorCheckedIndicator">#1976d2</color>
+
 </resources>
