--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,15 +20,23 @@
         android:layout_height="match_parent"
         app:layoutDescription="@xml/scene_memo">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvContents"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/refresh"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:splitMotionEvents="false"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintTop_toBottomOf="@+id/headerBlurView"
-            app:memoList="@{viewModel.memoList}"
-            app:viewModel="@{viewModel}" />
+            app:layout_constraintTop_toBottomOf="@+id/headerBlurView">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvContents"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:splitMotionEvents="false"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:memoList="@{viewModel.memoList}"
+                app:viewModel="@{viewModel}" />
+
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <!-- Header 영역 -->
         <com.hmju.memo.widget.blurView.BlurView
